--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
         /* Стили кнопок управления */
         #controls {
             position: fixed;
-            bottom: 20px;
+            bottom: 5%;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 2%;
         }
 
         #controls button {
-            width: 60px;
-            height: 60px;
-            font-size: 24px;
+            width: 15vw;
+            height: 15vw;
+            max-width: 80px;
+            max-height: 80px;
+            font-size: 5vw;
+            max-font-size: 40px;
             border: none;
             border-radius: 10px;
             background-color: #fff;
@@ -41,23 +44,11 @@
         #controls .up-down {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 2%;
         }
 
         #controls button:active {
             background-color: #ddd;
-        }
-
-        @media (orientation: landscape) {
-            #controls {
-                bottom: 20px;
-            }
-        }
-
-        @media (orientation: portrait) {
-            #controls {
-                bottom: 80px;
-            }
         }
     </style>
 </head>
